; kernel1 and kronecker have been replaced with new, more optimized
; implementations.
(executable (name kronecker) (modules kronecker))
(library (name kernel1Old) (modules kernel1Old))
(executable (name kernel2) (modules kernel2) (libraries kernel1Old))
(executable (name kernel3) (modules kernel3) (libraries kernel1Old))

;;;;; Newer implementations ;;;;;

(library
  (name graphTypes)
  (modules graphTypes)
  (modules_without_implementation graphTypes)
)

(library
  (name generateSeq)
  (modules generateSeq)
  (libraries graphTypes fileHandler)
)

(library
  (name fileHandler)
  (modules fileHandler)
)

(executable
  (name gen)
  (modules gen)
  (libraries unix generateSeq fileHandler)
)

(library
  (name sparseGraphSeq)
  (modules sparseGraphSeq)
  (libraries graphTypes)
)

(library
  (name kernel1Seq)
  (modules kernel1Seq)
  (libraries generateSeq sparseGraphSeq unix)
)

(executable
  (name kernel1Seq_run)
  (modules kernel1Seq_run)
  (modes byte exe)
  (libraries sparseGraphSeq graphTypes fileHandler kernel1Seq unix)
)

;(alias
;  (name buildbench)
;  (deps kronecker.exe kernel2.exe kernel3.exe
;        gen.exe kernel1Seq_run.exe)
;)
