; kernel1 and kronecker have been replaced with new, more optimized
; implementations.
(executable (name kronecker) (modules kronecker))
(library (name kernel1Old) (modules kernel1Old))
(executable (name kernel2) (modules kernel2) (libraries kernel1Old))
(executable (name kernel3) (modules kernel3) (libraries kernel1Old))

;;;;; Newer implementations ;;;;;

(library
  (name graphTypes)
  (modules graphTypes)
  (modules_without_implementation graphTypes)
  (ocamlc_flags -g)
)

(library
  (name generateSeq)
  (modules generateSeq)
  (libraries graphTypes fileHandler)
  (ocamlc_flags -g)
)

(library
  (name fileHandler)
  (modules fileHandler)
  (ocamlc_flags -g)
)

(executable
  (name gen)
  (modules gen)
  (libraries unix generateSeq fileHandler)
  (ocamlc_flags -g)
)

(library
  (name sparseGraphSeq)
  (modules sparseGraphSeq)
  (libraries graphTypes)
  (ocamlc_flags -g)
)

(library
  (name kernel1Seq)
  (modules kernel1Seq)
  (libraries generateSeq sparseGraphSeq unix)
  (ocamlc_flags -g)
)

(library
  (name kernel2Seq)
  (modules kernel2Seq)
  (libraries generateSeq sparseGraphSeq unix)
  (preprocess (pps ppx_inline_test ppx_assert))
  (inline_tests)
  (ocamlc_flags -g)
)

(executable
  (name testk2)
  (modules testk2)
  (modes byte exe)
  (libraries kernel2Seq sparseGraphSeq graphTypes fileHandler kernel1Seq unix)
  (ocamlc_flags -g)
)

;(alias
;  (name buildbench)
;  (deps kronecker.exe kernel2.exe kernel3.exe
;        gen.exe kernel1Seq_run.exe)
;)
